--- a/HTML/Ejercicios HTML/Ejercicio HTML 2.html
+++ b/HTML/Ejercicios HTML/Ejercicio HTML 2.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio HTML 2</title>
+    <link rel="stylesheet" href="../../CSS/Ejercicios CSS/css/Ejercicio2_styles.css">
 </head>
 <body>
     <h1>Centro Educativo Egibide</h1>
     <hr>
-    <h2>Índice</h2>
-    <ol>
-        <li><a href="#1">Historia</a></li>
-        <li><a href="#2">Oferta educativa</a></li>
-        <li><a href="#3">Campus</a></li>
-        <li><a href="#4">Contacto</a></li>
-    </ol>
+    <nav>
+        <ol>
+            <li><a href="#1">Historia</a></li>
+            <li><a href="#2">Oferta educativa</a></li>
+            <li><a href="#3">Campus</a></li>
+            <li><a href="#4">Contacto</a></li>
+        </ol>
+    </nav>
     <br>
     <h2 id="1">Historia</h2>
     <p>En mayo de 2012 nace EGIBIDE como resultado de la unión de Diocesanas y Jesús Obrero 
@@ -25,7 +27,7 @@
         largo de la vida y la formación ocupacional.</p>
     <h2 id="2">Oferta Educativa</h2>
     <p>La oferta educativa de Egibide puede resumirse en la siguiente imagen</p>
-    <img src="images/Esquema Egibide.png" alt="Imagen" width="700px" height="700px">
+    <img src="../../images/Esquema Egibide.png" alt="Imagen" width="700px" height="700px">
     <p>Para más detalles haz click <a href="https://www.egibide.org/">en este enlace</a></p>
     <h2 id="3">5 Campus</h2>
     <p>Estos son los 5 campus que componen Egibide y su número de estudiantes y educadores</p>
